fix: in react ui, show code blocks in purple
The previous blue overlapped colors with the blue "variable" breadcrumbs.

--- a/pdl-live-react/src/view/masonry/Masonry.css
+++ b/pdl-live-react/src/view/masonry/Masonry.css
@@ -45,7 +45,7 @@
     background: var(--pf-t--global--color--nonstatus--orange--default);
   }
   &[data-kind="code"] {
-    background: var(--pf-t--global--color--nonstatus--blue--default);
+    background: var(--pf-t--global--color--nonstatus--purple--default);
   }
 }
 
